--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ header .Header nav ul .CTA:hover{
 }
 
 #Home{
-    background: url(Hero-Img.png);
+    background: url(https://github.com/MihirManas/saraswati/blob/main/Hero-Img.png);
     background-size: cover;
     background-position: top center;
     z-index: 1;
