--- a/style.css
+++ b/style.css
@@ -258,11 +258,15 @@ header .Header nav ul .CTA:hover{
     overflow: hidden;
     margin: 10px; /* Add margin to separate items */
     opacity: 70%;
+    height: 7cm;
+    width: 5cm;
 }
 
 #Academics .Academic-Item:hover{
     opacity: 100%;
     font-size: larger;
+    height: 9cm;
+    width: 7cm;
 }
 
 #Academics .Academic-Item::after {
@@ -287,6 +291,7 @@ header .Header nav ul .CTA:hover{
 #Academics .Academic-Item p {
     color: white;
     text-align: left;
+    font-size: 1.4rem;
 }
 
 #Academics .Academic-Bottom .icon {
