--- a/style.css
+++ b/style.css
@@ -258,11 +258,15 @@ header .Header nav ul .CTA:hover{
     overflow: hidden;
     margin: 10px; /* Add margin to separate items */
     opacity: 75%;
+    height: 8cm
+    width: 5cm;
 }
 
 #Academics .Academic-Item:hover{
     opacity: 100%;
     font-size: larger;
+    height: 9cm;
+    width: 7cm;
 }
 
 #Academics .Academic-Item::after {
