--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ header .Header nav ul .CTA:hover{
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 #Academics .Academic-Top h1{
@@ -257,16 +258,18 @@ header .Header nav ul .CTA:hover{
     z-index: 1;
     overflow: hidden;
     margin: 10px; /* Add margin to separate items */
-    opacity: 75%;
-    height: 8cm
-    width: 5cm;
+    opacity: 80%;
+    font-size: 1rem;
+    height: 7cm;
+    width: 4cm;
 }
 
 #Academics .Academic-Item:hover{
     opacity: 100%;
     font-size: larger;
-    height: 9cm;
-    width: 7cm;
+    height: 8cm;
+    width: 5cm;
+    font-size: 1.1rem;
 }
 
 #Academics .Academic-Item::after {
@@ -282,7 +285,7 @@ header .Header nav ul .CTA:hover{
 }
 
 #Academics .Academic-Item h2 {
-    font-size: 2rem;
+    font-size: 2.2rem;
     color: white;
     margin-bottom: 10px;
     text-transform: uppercase;
@@ -487,7 +490,17 @@ header .Header nav ul .CTA:hover{
     #Academics .Academic-Item {
         flex-basis: 20%;
         padding: 20px;
-        margin: 15px 0;
+        margin: 15px ;
+        height: auto;
+        width: auto;
+    }
+
+    #Academics .Academic-Item:hover {
+        flex-basis: 20%;
+        padding: 20px;
+        margin: 15px 10px;
+        height: auto;
+        width: auto;
     }
 
     #Academics .Academic-Top h1 {
